--- a/1_Basic_Example.ipynb
+++ b/1_Basic_Example.ipynb
@@ -29,7 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_dataset(X, y, axes):\n",
+    "def plot_data_set(X, y, axes):\n",
     "    plt.figure(\"Make Moon Data\")\n",
     "    plt.plot(X[:, 0][y==0], X[:, 1][y==0], \"rs\")\n",
     "    plt.plot(X[:, 0][y==1], X[:, 1][y==1], \"bo\")\n",
@@ -39,7 +39,8 @@
     "    plt.ylabel(r\"$x_2$\", fontsize=20, rotation=0)\n",
     "    plt.show()\n",
     "\n",
-    "def plot_predition(X, y, y_pred, axes):\n",
+    "\n",
+    "def plot_prediction(X, y, y_pred, axes):\n",
     "    plt.figure(\"Predicted Results vs Real\")\n",
     "    plt.plot(X[:, 0][y==0], X[:, 1][y==0], \"rs\")\n",
     "    plt.plot(X[:, 0][y==1], X[:, 1][y==1], \"bo\")\n",
@@ -49,6 +50,18 @@
     "    plt.grid(True, which='both')\n",
     "    plt.xlabel(r\"$x_1$\", fontsize=20)\n",
     "    plt.ylabel(r\"$x_2$\", fontsize=20, rotation=0)\n",
+    "    plt.show()\n",
+    "    \n",
+    "    \n",
+    "def plot_cost(costs):\n",
+    "    # Make an agg figure\n",
+    "    fig, ax = plt.subplots()\n",
+    "    ax.plot(costs)\n",
+    "    ax.set_title('Loss Over Epochs')\n",
+    "    fig.canvas.draw()\n",
+    "    # Grab the pixel buffer and dump it into a numpy array\n",
+    "    X = np.array(fig.canvas.renderer._renderer)\n",
+    "    # Now display the array X as an Axes in a new figure\n",
     "    plt.show()"
    ]
   },
@@ -61,7 +74,7 @@
     "X, y = make_moons(n_samples=1000, noise=0.3, random_state=42)\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.33, random_state=42)\n",
     "# scatter plot, dots colored by class value\n",
-    "plot_dataset(X, y, [-1.5, 2.5, -1, 1.5])"
+    "plot_data_set(X, y, [-1.5, 2.5, -1, 1.5])"
    ]
   },
   {
@@ -121,7 +134,7 @@
     "\n",
     "print(\"Incorrect Predictions: \", X_test[:, :][y_test != pred_y])\n",
     "print(\"F1 score: \", f1_score(y_test, pred_y))\n",
-    "plot_predition(X_test, y_test, pred_y, [-1.5, 2.5, -1, 1.5])"
+    "plot_prediction(X_test, y_test, pred_y, [-1.5, 2.5, -1, 1.5])"
    ]
   },
   {
@@ -130,16 +143,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Make an agg figure\n",
-    "fig, ax = plt.subplots()\n",
-    "ax.plot(costs)\n",
-    "ax.set_title('Loss Over Epochs')\n",
-    "fig.canvas.draw()\n",
-    "# Grab the pixel buffer and dump it into a numpy array\n",
-    "X = np.array(fig.canvas.renderer._renderer)\n",
-    "\n",
-    "# Now display the array X as an Axes in a new figure\n",
-    "plt.show()"
+    "plot_cost(costs)"
    ]
   }
  ],
